Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92822

QTextBoundaryFinder broken for multipart emoji in Qt 5.15

XMLWordPrintable

    • All
    • a794c5e287381bd056008b20ae55f9b1e0acf138 (qt/qtbase/dev) a3f75608f0e8339ae2a6ca4b34955d69fdbacc84 (qt/qtbase/6.1) cf00353f303de3956a4116f4cec826e16aa6181f (qt/qtbase/6.0) be0aa6a9a230dc98994cb65d97b76be7ae695a44 (qt/tqtc-qtbase/5.15)

      TextBoundaryFinder tb(QTextBoundaryFinder::Grapheme reports that https://emojigraph.org/man-singer emoji is of width 2 whereas the correct answer is 1. Works fine in Qt 5.14.0, broken in Qt 5.15.0 - Qt 6. Attached is a reproduction case.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            peppe Giuseppe D'Angelo
            vadi Vadim Peretokin
            Maurice Kalinowski Maurice Kalinowski
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes